# maven-ai-engineering-bootcamp

./: .gitignore  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
notebooks/week1/: 01-llm-apis.ipynb
notebooks/week_2/: 01-RAG-preprocessing-Amazon.ipynb  02-RAG-Pipeline.ipynb
src/api/: app.py
src/api/core/: config.py
src/chatbot_ui/: app.py
src/chatbot_ui/core/: config.py
