[project]
name = "maven-ai-engineering-bootcamp"
version = "0.1.0"
description = "Project App for the Maven AI Engineering Cohort Bootcamp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.50.1",
    "groq>=0.34.1",
    "ipykernel>=7.1.0",
    "openai>=2.8.0",
]
